<resources>
    <string name="app_name">FamPad</string>
    <string name="q1_Title">Let me know you</string>
    <string name="q1_prefix">All questions are between the scale 0 – 4 with 0 being definitely disagree to 4 being definitely agree.</string>
    <string name="q1_1">1.Your partner is very controlling of you</string>
    <string name="q1_2">2.Your partner is jealous of your success</string>
    <string name="q1_3">3.When you make small mistakes, your partner gets very angry</string>
    <string name="q1_4">4.Your partner hates some of your characteristics</string>
    <string name="q1_5">5.You are sometimes very afraid of your partner</string>
    <string name="q1_6">6.You\'re terrified to tell your partner anything he or she doesn\'t approve of.</string>
    <string name="q1_7">7.Your partner lies to you very often.</string>
    <string name="q1_8">8.Your partner has blackmailed you for something</string>
    <string name="q1_9">9.Your partner has used violence against you</string>
    <string name="q1_10">10.Your partner is extremely addicted to a substance</string>
    <string name="q1_11">11.You are sure that you or anyone in your family has been hurt</string>
    <string name="q2_prefix">FamPad is with you in every step of the way in ending the abuse you are subjected to. Together, we will ensure that you are happy and free again! Please answer the questions as accurately as possible to show the most appropriate content to you.</string>
    <string name="q2_1">1.What age category do you belong to?</string>
    <string name="q2_2">2.Which gender does your partner associate themselves with?</string>
    <string name="q2_3">3.How long back did you observe the first signs of abuse?</string>
    <string name="q2_4">4.Have you ever been physically hit, burnt, beaten or bruised?</string>
    <string name="q2_5">5.Have you ever felt physically scared of your partner?</string>
    <string name="q2_6">6.Has your partner ever threatened to harm you?</string>
    <string name="q2_7">7.Do you think your partner is financially controlling? </string>
    <string name="q2_8">8.Do you ever get scared while discussing finances with your partner? </string>
    <string name="q2_9">9.Do you ever lie or have caught your partner lie while talking about money?</string>
    <string name="q2_10">10.Do you ever feel like you are mentally tortured or stuck? </string>
    <string name="q2_11">11.Do you often feel low around your partner?</string>
    <string name="q2_12">12.Do you ever think your partner is harassing you or blackmailing you?</string>
    <string name="q2_13">13.Do you have a kid or kids with your partner?</string>
    <string name="registration_title">FamPad Registration</string>
    <string name="password_check">Two password should be same!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Resource</string>
    <string name="title_dashboard">Plan Of Actions</string>
    <string name="title_notifications">Exploration</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="connection">lithe-style-241007:australia-southeast1:man-kind</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="resources">Resources</string>
    <string name="curriculum">Action Plan</string>
    <string name="visualization">Exploration</string>
    <string name="visualize">Please choose the resources to be visualized</string>
    <string name="impact_assistance">Impact/Assistance</string>
    <string name="the_assistance_male_recipients_receive_from_centrelink">The assistance male Recipients receive from Centrelink</string>
    <string name="remember_there_are_no_correct_or_wrong_answers_do_not_spend_too_much_time_on_any_statement">● Remember there are no correct or wrong answers. Do not spend too much time on any statement.</string>
    <string name="in_the_next_couple_of_pages_you_will_be_presented_with_a_a_series_of_statements_please_read_each_statement_and_select_a_level_between_0_and_4_which_indicates_how_much_the_statement_was_relevant_to_you_over_the_past_week">● In the next couple of pages, you will be presented with a a series of statements. Please read each statement and select a level between 0 and 4 which indicates how much the statement was relevant to you over the past week.</string>
    <string name="this_self_assessment_test_should_take_about_2_minutes_to_complete">This self-assessment test should take about 2 minutes to complete.</string>
    <string name="the_content_will_contain_but_not_limited_to_self_help_curriculum_essential_resources_data_visualisation_and_self_assessment_tools">● The content will contain but not limited to self-help curriculum, essential resources, data visualisation and self-assessment tools.</string>
    <string name="note_there_are_hundreds_of_other_known_domestic_violence_types_that_are_not_covered_here">Note: There are hundreds of other known domestic violence types that are not covered here.</string>
    <string name="we_will_aim_to_identify_the_kind_of_domestic_violence_your_are_subjected_to_and_take_into_your_account_your_factors_while_displaying_a_specially_curated_content">● We will aim to identify the kind of domestic violence your are subjected to and take into your account your factors while displaying a specially curated content.</string>
    <string name="you_will_be_shown_a_series_of_questions_choose_the_most_suitable_answer_according_to_your_situation">● You will be shown a series of questions. Choose the most suitable answer according to your situation.</string>
    <string name="now_that_you_have_a_fair_idea_of_you_situation_let_us_understand_you_better_to_help_you">Now that you have a fair idea of you situation, let us understand you better to help you.</string>
    <string name="instruction">Instruction</string>
    <string name="set_your_goal">Set your Goal:</string>
    <string name="submit">Submit</string>
    <string name="show_completed_tasks">Show Completed Tasks</string>
    <string name="confirm">Confirm</string>
    <string name="tasks_completed">Tasks Completed:</string>
    <string name="harry_poter1">Mr. and Mrs. Dursley, of number four, Privet Drive, were proud to say that they were perfectly normal, thank you very much. They were the last people you\'d expect to be involved in anything strange or mysterious, because they just didn\'t hold with such nonsense.</string>
    <string name="congratulation_you_have_already_completed_all_the_tasks">Congratulation! You have already completed all the tasks!</string>
    <string name="harry_potter_and_the_sorcerer_s_stone">Harry Potter and the Sorcerer‘s Stone</string>
    <string name="harry_poter2">Mr. Dursley was the director of a firm called Grunnings, which made drills. He was a big, beefy man with hardly any neck, although he did have a very large mustache. Mrs. Dursley was thin and blonde and had nearly twice the usual amount of neck, which came in very useful as she spent so much of her time craning over garden fences, spying on the neighbors. The Dursleys had a small son called Dudley and in their opinion there was no finer boy anywhere.</string>
    <string name="harry_poter3">The Dursleys had everything they wanted, but they also had a secret, and their greatest fear was that somebody would discover it. They didn\'t think they could bear it if anyone found out about the Potters. Mrs. Potter was Mrs. Dursley\'s sister, but they hadn\'t met for several years; in fact, Mrs. Dursley pretended she didn\'t have a sister, because her sister and her good-for-nothing husband were as unDursleyish as it was possible to be. The Dursleys shuddered to think what the neighbors would say if the Potters arrived in the street. The Dursleys knew that the Potters had a small son, too, but they had never even seen him. This boy was another good reason for keeping the Potters away; they didn\'t want Dudley mixing with a child like that.When Mr. and Mrs. Dursley woke up on the dull, gray Tuesday our story starts, there was nothing about the cloudy sky outside to suggest that strange and mysterious things would soon be happening all over the country. Mr. Dursley hummed as he picked out his most boring tie for work, and Mrs. Dursley gossiped away happily as she wrestled a screaming Dudley into his high chair.</string>
    <string name="harry_poter4">None of them noticed a large, tawny owl flutter past the window.</string>
    <string name="tracker">Tracker</string>
    <string name="harry_poter5">At half past eight, Mr. Dursley picked up his briefcase, pecked Mrs. Dursley on the cheek, and tried to kiss Dudley good-bye but missed, because Dudley was now having a tantrum and throwing his cereal at the walls.</string>
    <string name="redo_questionnaire_1">Questionnaire 1</string>
    <string name="redo_questionnaire_2">Questionnaire 2</string>
    <string name="story_title">Around the World In 80 Days</string>
    <string name="what_to_display">What to display:</string>
    <string name="tasks_for_you">Tasks for you:</string>
    <string name="self_assessment">Self-Assessment</string>
    <string name="re_check_my_situation">Re-check My Situation</string>
    <string name="after_you_complete_all_the_tasks_you_will_enter_stage_5">After you complete all the tasks, you will enter stage 5.</string>
    <string name="congratulation_you_have_completed_all_the_tasks_please_re_attempt_the_questionnaires_see_whether_things_are_getiing_better">Congratulation you have completed all the tasks. Please re-attempt the questionnaires see whether things are getiing better.</string>
    <string name="you_can_re_check_your_situation_by_clicking_the_button_below">● You can re-check your situation by clicking the button below</string>
    <string name="the_plan_of_actions_and_resources_are_customized_based_on_this_result">● The plan of actions and resources are customized based on this result</string>
    <string name="re_check">Re-check</string>
    <string name="re_assess">Re-assess</string>
    <string-array name="labels">
        <item>Stage 1</item>
        <item>Stage 2</item>
        <item>Stage 3</item>
        <item>Stage 4</item>
        <item>END</item>
    </string-array>
</resources>
