<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_completed_tasks" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/checked_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tasks_completed"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:visibility="gone"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_checked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_green_bg"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/confirm" />

</LinearLayout>