<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visualize" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/impact_assistance" />

    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/barchart"
        android:layout_width="match_parent"
        android:layout_height="320dip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="gone" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart"
        android:layout_width="match_parent"
        android:layout_height="320dip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="visible">

    </com.github.mikephil.charting.charts.PieChart>
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/the_assistance_male_recipients_receive_from_centrelink"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:gravity="center">
    </TextView>
</LinearLayout>