<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:gravity="start"
            android:text="@string/what_to_display"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="top"
            android:layout_gravity="top"
            android:dropDownWidth="wrap_content"
            android:spinnerMode="dropdown" />
        <Button
            android:id="@+id/info_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@drawable/i"
            android:gravity="center"
            android:layout_gravity="top"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="320dp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_weight="1"
        android:visibility="gone"/>

    <Button
        android:id="@+id/redo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/redo_questionnaire_1" />

    <Button
        android:id="@+id/redo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/redo_questionnaire_2" />
</LinearLayout>